--- a/Open-Chemera-master/oclibrary/chemera/chemera.lpi
+++ b/Open-Chemera-master/oclibrary/chemera/chemera.lpi
@@ -45,8 +45,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <IsVisibleTab Value="True"/>
-        <TopLine Value="883"/>
-        <CursorPos Y="897"/>
+        <TopLine Value="931"/>
+        <CursorPos X="14" Y="938"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -549,7 +549,7 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="chemeramain.pas"/>
-        <Line Value="898"/>
+        <Line Value="938"/>
       </Item2>
     </BreakPoints>
     <Exceptions Count="3">
