--- a/Open-Chemera-master/oclibrary/chemera/chemera.lpi
+++ b/Open-Chemera-master/oclibrary/chemera/chemera.lpi
@@ -45,8 +45,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <IsVisibleTab Value="True"/>
-        <TopLine Value="931"/>
-        <CursorPos X="14" Y="938"/>
+        <TopLine Value="143"/>
+        <CursorPos Y="157"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -198,8 +198,8 @@
       <Unit21>
         <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
         <EditorIndex Value="8"/>
-        <TopLine Value="203"/>
-        <CursorPos X="4" Y="218"/>
+        <TopLine Value="134"/>
+        <CursorPos X="41" Y="147"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
       </Unit21>
@@ -359,8 +359,8 @@
       <Unit43>
         <Filename Value="..\docking\rotations.pas"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="77"/>
-        <CursorPos X="52" Y="93"/>
+        <TopLine Value="264"/>
+        <CursorPos X="5" Y="279"/>
         <UsageCount Value="106"/>
         <Loaded Value="True"/>
       </Unit43>
@@ -374,124 +374,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="312" Column="37" TopLine="296"/>
+        <Filename Value="..\docking\rotations.pas"/>
+        <Caret Line="97" Column="53" TopLine="77"/>
       </Position1>
       <Position2>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="313" Column="23" TopLine="296"/>
+        <Filename Value="..\docking\rotations.pas"/>
+        <Caret Line="388" Column="40" TopLine="369"/>
       </Position2>
       <Position3>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="440" Column="29" TopLine="429"/>
+        <Caret Line="51" Column="7" TopLine="45"/>
       </Position3>
       <Position4>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="97" Column="53" TopLine="77"/>
+        <Caret Line="421" Column="9" TopLine="413"/>
       </Position4>
       <Position5>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="388" Column="40" TopLine="369"/>
+        <Caret Line="124" TopLine="109"/>
       </Position5>
       <Position6>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="51" Column="7" TopLine="45"/>
+        <Caret Line="138" Column="14" TopLine="123"/>
       </Position6>
       <Position7>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="421" Column="9" TopLine="413"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="308" Column="17" TopLine="296"/>
       </Position7>
       <Position8>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="124" TopLine="109"/>
+        <Caret Line="451" Column="3" TopLine="430"/>
       </Position8>
       <Position9>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="138" Column="14" TopLine="123"/>
+        <Caret Line="334" TopLine="334"/>
       </Position9>
       <Position10>
         <Filename Value="chemeramain.pas"/>
-        <Caret Line="308" Column="17" TopLine="296"/>
+        <Caret Line="309" TopLine="296"/>
       </Position10>
       <Position11>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="451" Column="3" TopLine="430"/>
+        <Caret Line="105" Column="32" TopLine="86"/>
       </Position11>
       <Position12>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="334" TopLine="334"/>
+        <Caret Line="467" Column="16" TopLine="453"/>
       </Position12>
       <Position13>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="309" TopLine="296"/>
+        <Filename Value="..\docking\rotations.pas"/>
+        <Caret Line="253" Column="84" TopLine="230"/>
       </Position13>
       <Position14>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="105" Column="32" TopLine="86"/>
+        <Caret Line="106" Column="22" TopLine="95"/>
       </Position14>
       <Position15>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="467" Column="16" TopLine="453"/>
+        <Caret Line="462" Column="21" TopLine="446"/>
       </Position15>
       <Position16>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="253" Column="84" TopLine="230"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="316" Column="35" TopLine="293"/>
       </Position16>
       <Position17>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="106" Column="22" TopLine="95"/>
+        <Caret Line="509" Column="46" TopLine="503"/>
       </Position17>
       <Position18>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="462" Column="21" TopLine="446"/>
+        <Caret Line="507" Column="34" TopLine="475"/>
       </Position18>
       <Position19>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="316" Column="35" TopLine="293"/>
-      </Position19>
-      <Position20>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="509" Column="46" TopLine="503"/>
-      </Position20>
-      <Position21>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="507" Column="34" TopLine="475"/>
-      </Position21>
-      <Position22>
         <Filename Value="..\docking\rotations.pas"/>
         <Caret Line="93" Column="55" TopLine="88"/>
+      </Position19>
+      <Position20>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="328" Column="32" TopLine="312"/>
+      </Position20>
+      <Position21>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="332" Column="77" TopLine="303"/>
+      </Position21>
+      <Position22>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="4" Column="18"/>
       </Position22>
       <Position23>
         <Filename Value="chemeramain.pas"/>
-        <Caret Line="328" Column="32" TopLine="312"/>
+        <Caret Line="335" Column="33" TopLine="321"/>
       </Position23>
       <Position24>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="332" Column="77" TopLine="303"/>
+        <Filename Value="..\base\oclconfiguration.pas"/>
+        <Caret Line="108" Column="14" TopLine="95"/>
       </Position24>
       <Position25>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="4" Column="18"/>
+        <Filename Value="..\base\oclconfiguration.pas"/>
+        <Caret Line="32" Column="82" TopLine="18"/>
       </Position25>
       <Position26>
         <Filename Value="chemeramain.pas"/>
-        <Caret Line="335" Column="33" TopLine="321"/>
+        <Caret Line="833" Column="22" TopLine="816"/>
       </Position26>
       <Position27>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="108" Column="14" TopLine="95"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="14" Column="10" TopLine="10"/>
       </Position27>
       <Position28>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="32" Column="82" TopLine="18"/>
+        <Filename Value="..\docking\rotations.pas"/>
+        <Caret Line="93" Column="52" TopLine="77"/>
       </Position28>
       <Position29>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="38" Column="16" TopLine="106"/>
+        <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
+        <Caret Line="201"/>
       </Position29>
       <Position30>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="833" Column="22" TopLine="816"/>
+        <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
+        <Caret Line="147" Column="41" TopLine="134"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -523,11 +523,6 @@
         <OptimizationLevel Value="3"/>
       </Optimizations>
     </CodeGeneration>
-    <Linking>
-      <Debugging>
-        <GenerateDebugInfo Value="False"/>
-      </Debugging>
-    </Linking>
     <Other>
       <Verbosity>
         <ShowHints Value="False"/>
@@ -536,23 +531,16 @@
     </Other>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="2">
+    <BreakPoints Count="1">
       <Item1>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
-        <Source Value="..\base\oclconfiguration.pas"/>
-        <Line Value="38"/>
+        <Source Value="..\..\sharedunits\display\displayobjects.pas"/>
+        <Line Value="148"/>
       </Item1>
-      <Item2>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
-        <Source Value="chemeramain.pas"/>
-        <Line Value="938"/>
-      </Item2>
     </BreakPoints>
-    <Exceptions Count="3">
+    <Exceptions Count="4">
       <Item1>
         <Name Value="EAbort"/>
       </Item1>
@@ -562,6 +550,9 @@
       <Item3>
         <Name Value="EFOpenError"/>
       </Item3>
+      <Item4>
+        <Name Value="EConvertError"/>
+      </Item4>
     </Exceptions>
   </Debugging>
 </CONFIG>
