--- a/Open-Chemera-master/oclibrary/chemera/chemera.lpi
+++ b/Open-Chemera-master/oclibrary/chemera/chemera.lpi
@@ -31,7 +31,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="45">
+    <Units Count="36">
       <Unit0>
         <Filename Value="chemera.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -45,8 +45,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <IsVisibleTab Value="True"/>
-        <TopLine Value="143"/>
-        <CursorPos Y="157"/>
+        <TopLine Value="883"/>
+        <CursorPos X="48" Y="901"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -71,7 +71,8 @@
         <Filename Value="..\molecule\pdbmolecules.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="5"/>
-        <TopLine Value="35"/>
+        <TopLine Value="375"/>
+        <CursorPos X="11" Y="394"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
       </Unit4>
@@ -95,7 +96,7 @@
         <Filename Value="..\UI\glutwindow.pas"/>
         <TopLine Value="191"/>
         <CursorPos X="21" Y="203"/>
-        <UsageCount Value="66"/>
+        <UsageCount Value="56"/>
       </Unit7>
       <Unit8>
         <Filename Value="..\display\base3ddisplay.pas"/>
@@ -138,18 +139,12 @@
         <Loaded Value="True"/>
       </Unit12>
       <Unit13>
-        <Filename Value="C:\lazarus\lcl\dialogs.pp"/>
-        <TopLine Value="16"/>
-        <CursorPos X="14" Y="139"/>
-        <UsageCount Value="7"/>
-      </Unit13>
-      <Unit14>
         <Filename Value="..\utils\geomhash.pas"/>
         <IsPartOfProject Value="True"/>
         <CursorPos X="43" Y="21"/>
         <UsageCount Value="208"/>
-      </Unit14>
-      <Unit15>
+      </Unit13>
+      <Unit14>
         <Filename Value="..\..\sharedunits\display\oglform.pas"/>
         <ComponentName Value="OpenGLForm"/>
         <HasResources Value="True"/>
@@ -159,51 +154,44 @@
         <CursorPos X="27" Y="298"/>
         <UsageCount Value="139"/>
         <Loaded Value="True"/>
-      </Unit15>
-      <Unit16>
+      </Unit14>
+      <Unit15>
         <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
         <EditorIndex Value="4"/>
         <TopLine Value="134"/>
         <CursorPos X="51" Y="1018"/>
         <UsageCount Value="114"/>
         <Loaded Value="True"/>
-      </Unit16>
-      <Unit17>
+      </Unit15>
+      <Unit16>
         <Filename Value="..\..\sharedunits\utils\stringutils.pas"/>
         <TopLine Value="205"/>
         <CursorPos X="7" Y="221"/>
-        <UsageCount Value="75"/>
-      </Unit17>
-      <Unit18>
-        <Filename Value="..\molecule\pdbparser.pas"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="263"/>
-        <CursorPos X="27" Y="277"/>
-        <UsageCount Value="9"/>
-      </Unit18>
-      <Unit19>
+        <UsageCount Value="65"/>
+      </Unit16>
+      <Unit17>
         <Filename Value="..\..\sharedunits\display\base3ddisplay.pas"/>
         <EditorIndex Value="9"/>
         <TopLine Value="63"/>
         <CursorPos X="19" Y="79"/>
         <UsageCount Value="112"/>
         <Loaded Value="True"/>
-      </Unit19>
-      <Unit20>
+      </Unit17>
+      <Unit18>
         <Filename Value="..\..\sharedunits\utils\geomhash.pas"/>
         <TopLine Value="113"/>
         <CursorPos X="9" Y="66"/>
-        <UsageCount Value="91"/>
-      </Unit20>
-      <Unit21>
+        <UsageCount Value="81"/>
+      </Unit18>
+      <Unit19>
         <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
         <EditorIndex Value="8"/>
         <TopLine Value="134"/>
-        <CursorPos X="41" Y="147"/>
+        <CursorPos Y="149"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
-      </Unit21>
-      <Unit22>
+      </Unit19>
+      <Unit20>
         <Filename Value="..\gui\moleculetree.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="MolTreeForm"/>
@@ -212,15 +200,15 @@
         <TopLine Value="19"/>
         <CursorPos X="81" Y="35"/>
         <UsageCount Value="200"/>
-      </Unit22>
-      <Unit23>
+      </Unit20>
+      <Unit21>
         <Filename Value="..\..\sharedunits\forms\notifications.pas"/>
         <IsPartOfProject Value="True"/>
         <TopLine Value="18"/>
         <CursorPos X="61" Y="31"/>
         <UsageCount Value="200"/>
-      </Unit23>
-      <Unit24>
+      </Unit21>
+      <Unit22>
         <Filename Value="..\..\sharedunits\utils\geomutils.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="12"/>
@@ -228,8 +216,8 @@
         <CursorPos X="10" Y="81"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
-      </Unit24>
-      <Unit25>
+      </Unit22>
+      <Unit23>
         <Filename Value="..\molecule\molutils.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="6"/>
@@ -237,8 +225,8 @@
         <CursorPos X="19" Y="75"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
-      </Unit25>
-      <Unit26>
+      </Unit23>
+      <Unit24>
         <Filename Value="..\docking\linegrids.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="7"/>
@@ -246,21 +234,21 @@
         <CursorPos X="3" Y="33"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
-      </Unit26>
-      <Unit27>
+      </Unit24>
+      <Unit25>
         <Filename Value="C:\lazarus\fpc\2.6.0\source\packages\opengl\src\gl.pp"/>
         <TopLine Value="1122"/>
         <CursorPos X="3" Y="1138"/>
-        <UsageCount Value="56"/>
-      </Unit27>
-      <Unit28>
+        <UsageCount Value="46"/>
+      </Unit25>
+      <Unit26>
         <Filename Value="..\..\sharedunits\display\povray.pas"/>
         <IsPartOfProject Value="True"/>
         <WindowIndex Value="1"/>
         <CursorPos X="16" Y="25"/>
         <UsageCount Value="202"/>
-      </Unit28>
-      <Unit29>
+      </Unit26>
+      <Unit27>
         <Filename Value="..\docking\dockdomains.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="13"/>
@@ -268,14 +256,14 @@
         <CursorPos X="19" Y="69"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
-      </Unit29>
-      <Unit30>
+      </Unit27>
+      <Unit28>
         <Filename Value="C:\lazarus\lcl\forms.pp"/>
         <TopLine Value="691"/>
         <CursorPos X="45" Y="715"/>
-        <UsageCount Value="71"/>
-      </Unit30>
-      <Unit31>
+        <UsageCount Value="61"/>
+      </Unit28>
+      <Unit29>
         <Filename Value="..\docking\dockconstraints.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="14"/>
@@ -283,215 +271,168 @@
         <CursorPos X="23" Y="378"/>
         <UsageCount Value="204"/>
         <Loaded Value="True"/>
-      </Unit31>
-      <Unit32>
+      </Unit29>
+      <Unit30>
         <Filename Value="C:\lazarus\fpc\2.6.0\source\rtl\inc\objpash.inc"/>
         <TopLine Value="185"/>
         <CursorPos X="24" Y="201"/>
-        <UsageCount Value="40"/>
-      </Unit32>
-      <Unit33>
+        <UsageCount Value="30"/>
+      </Unit30>
+      <Unit31>
         <Filename Value="..\docking\bogie.pas"/>
         <EditorIndex Value="15"/>
         <UsageCount Value="103"/>
         <Loaded Value="True"/>
-      </Unit33>
-      <Unit34>
+      </Unit31>
+      <Unit32>
         <Filename Value="..\molecule\surface.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="16"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
-      </Unit34>
-      <Unit35>
-        <Filename Value="C:\lazarus\fpc\2.6.0\source\rtl\objpas\sysutils\sysstrh.inc"/>
-        <TopLine Value="139"/>
-        <CursorPos X="10" Y="155"/>
-        <UsageCount Value="8"/>
-      </Unit35>
-      <Unit36>
-        <Filename Value="..\docking\docktasks.pas"/>
-        <TopLine Value="735"/>
-        <CursorPos Y="757"/>
-        <UsageCount Value="1"/>
-      </Unit36>
-      <Unit37>
+      </Unit32>
+      <Unit33>
         <Filename Value="..\..\sharedunits\forms\formdocker.pas"/>
         <IsPartOfProject Value="True"/>
         <TopLine Value="14"/>
         <CursorPos X="81" Y="26"/>
         <UsageCount Value="206"/>
-      </Unit37>
-      <Unit38>
-        <Filename Value="C:\lazarus\fpc\2.6.0\source\packages\opengl\src\glu.pp"/>
-        <TopLine Value="84"/>
-        <CursorPos X="3" Y="100"/>
-        <UsageCount Value="1"/>
-      </Unit38>
-      <Unit39>
-        <Filename Value="C:\lazarus\components\opengl\openglcontext.pas"/>
-        <UnitName Value="OpenGLContext"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="182"/>
-        <CursorPos X="3" Y="198"/>
-        <UsageCount Value="2"/>
-      </Unit39>
-      <Unit40>
-        <Filename Value="..\molecule\molfit.pas"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="4"/>
-        <CursorPos X="43" Y="20"/>
-        <UsageCount Value="2"/>
-      </Unit40>
-      <Unit41>
+      </Unit33>
+      <Unit34>
         <Filename Value="..\sequence\alignment.pas"/>
         <IsPartOfProject Value="True"/>
         <WindowIndex Value="1"/>
         <UsageCount Value="272"/>
-      </Unit41>
-      <Unit42>
-        <Filename Value="C:\lazarus\fpc\2.6.4\source\packages\opengl\src\glu.pp"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="387"/>
-        <CursorPos X="3" Y="400"/>
-        <UsageCount Value="1"/>
-      </Unit42>
-      <Unit43>
+      </Unit34>
+      <Unit35>
         <Filename Value="..\docking\rotations.pas"/>
         <EditorIndex Value="3"/>
         <TopLine Value="264"/>
         <CursorPos X="5" Y="279"/>
         <UsageCount Value="106"/>
         <Loaded Value="True"/>
-      </Unit43>
-      <Unit44>
-        <Filename Value="C:\lazarus\components\lazutils\fileutil.pas"/>
-        <UnitName Value="FileUtil"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="103"/>
-        <UsageCount Value="2"/>
-      </Unit44>
+      </Unit35>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="97" Column="53" TopLine="77"/>
+        <Caret Line="105" Column="32" TopLine="86"/>
       </Position1>
       <Position2>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="388" Column="40" TopLine="369"/>
+        <Caret Line="467" Column="16" TopLine="453"/>
       </Position2>
       <Position3>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="51" Column="7" TopLine="45"/>
+        <Caret Line="253" Column="84" TopLine="230"/>
       </Position3>
       <Position4>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="421" Column="9" TopLine="413"/>
+        <Caret Line="106" Column="22" TopLine="95"/>
       </Position4>
       <Position5>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="124" TopLine="109"/>
+        <Caret Line="462" Column="21" TopLine="446"/>
       </Position5>
       <Position6>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="138" Column="14" TopLine="123"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="316" Column="35" TopLine="293"/>
       </Position6>
       <Position7>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="308" Column="17" TopLine="296"/>
+        <Filename Value="..\docking\rotations.pas"/>
+        <Caret Line="509" Column="46" TopLine="503"/>
       </Position7>
       <Position8>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="451" Column="3" TopLine="430"/>
+        <Caret Line="507" Column="34" TopLine="475"/>
       </Position8>
       <Position9>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="334" TopLine="334"/>
+        <Caret Line="93" Column="55" TopLine="88"/>
       </Position9>
       <Position10>
         <Filename Value="chemeramain.pas"/>
-        <Caret Line="309" TopLine="296"/>
+        <Caret Line="328" Column="32" TopLine="312"/>
       </Position10>
       <Position11>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="105" Column="32" TopLine="86"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="332" Column="77" TopLine="303"/>
       </Position11>
       <Position12>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="467" Column="16" TopLine="453"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="4" Column="18"/>
       </Position12>
       <Position13>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="253" Column="84" TopLine="230"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="335" Column="33" TopLine="321"/>
       </Position13>
       <Position14>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="106" Column="22" TopLine="95"/>
+        <Filename Value="..\base\oclconfiguration.pas"/>
+        <Caret Line="108" Column="14" TopLine="95"/>
       </Position14>
       <Position15>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="462" Column="21" TopLine="446"/>
+        <Filename Value="..\base\oclconfiguration.pas"/>
+        <Caret Line="32" Column="82" TopLine="18"/>
       </Position15>
       <Position16>
         <Filename Value="chemeramain.pas"/>
-        <Caret Line="316" Column="35" TopLine="293"/>
+        <Caret Line="833" Column="22" TopLine="816"/>
       </Position16>
       <Position17>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="509" Column="46" TopLine="503"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="14" Column="10" TopLine="10"/>
       </Position17>
       <Position18>
         <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="507" Column="34" TopLine="475"/>
+        <Caret Line="93" Column="52" TopLine="77"/>
       </Position18>
       <Position19>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="93" Column="55" TopLine="88"/>
+        <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
+        <Caret Line="201"/>
       </Position19>
       <Position20>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="328" Column="32" TopLine="312"/>
+        <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
+        <Caret Line="147" Column="41" TopLine="134"/>
       </Position20>
       <Position21>
         <Filename Value="chemeramain.pas"/>
-        <Caret Line="332" Column="77" TopLine="303"/>
+        <Caret Line="157" TopLine="143"/>
       </Position21>
       <Position22>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="4" Column="18"/>
+        <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
+        <Caret Line="148" TopLine="134"/>
       </Position22>
       <Position23>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="335" Column="33" TopLine="321"/>
+        <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
+        <Caret Line="149" TopLine="134"/>
       </Position23>
       <Position24>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="108" Column="14" TopLine="95"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="898" Column="35" TopLine="878"/>
       </Position24>
       <Position25>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="32" Column="82" TopLine="18"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="899" Column="14" TopLine="884"/>
       </Position25>
       <Position26>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="833" Column="22" TopLine="816"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="124" Column="17" TopLine="105"/>
       </Position26>
       <Position27>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="14" Column="10" TopLine="10"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="679" Column="18" TopLine="661"/>
       </Position27>
       <Position28>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="93" Column="52" TopLine="77"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="680" Column="16" TopLine="661"/>
       </Position28>
       <Position29>
-        <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
-        <Caret Line="201"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="123" Column="30" TopLine="109"/>
       </Position29>
       <Position30>
-        <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
-        <Caret Line="147" Column="41" TopLine="134"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="96" Column="14" TopLine="82"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -531,15 +472,6 @@
     </Other>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="1">
-      <Item1>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
-        <Source Value="..\..\sharedunits\display\displayobjects.pas"/>
-        <Line Value="148"/>
-      </Item1>
-    </BreakPoints>
     <Exceptions Count="4">
       <Item1>
         <Name Value="EAbort"/>
