--- a/Open-Chemera-master/oclibrary/chemera/chemera.lpi
+++ b/Open-Chemera-master/oclibrary/chemera/chemera.lpi
@@ -44,9 +44,8 @@
         <ComponentName Value="CmMainForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <IsVisibleTab Value="True"/>
-        <TopLine Value="130"/>
-        <CursorPos Y="147"/>
+        <TopLine Value="884"/>
+        <CursorPos X="25" Y="899"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -70,9 +69,10 @@
       <Unit4>
         <Filename Value="..\molecule\pdbmolecules.pas"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="6"/>
-        <TopLine Value="221"/>
-        <CursorPos X="22" Y="324"/>
+        <TopLine Value="22"/>
+        <CursorPos X="36" Y="138"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
       </Unit4>
@@ -295,124 +295,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="..\molecule\pdbmolecules.pas"/>
-        <Caret Line="133" Column="17" TopLine="118"/>
+        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
+        <Caret Line="608" Column="21" TopLine="589"/>
       </Position1>
       <Position2>
         <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="187" Column="11" TopLine="172"/>
+        <Caret Line="597" Column="33" TopLine="589"/>
       </Position2>
       <Position3>
         <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="208" Column="26" TopLine="199"/>
+        <Caret Line="866" Column="57" TopLine="862"/>
       </Position3>
       <Position4>
         <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="373" Column="8" TopLine="371"/>
+        <Caret Line="1051" Column="14" TopLine="1025"/>
       </Position4>
       <Position5>
         <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="552" Column="24" TopLine="544"/>
+        <Caret Line="915" Column="13" TopLine="899"/>
       </Position5>
       <Position6>
         <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="608" Column="21" TopLine="589"/>
+        <Caret Line="923" Column="38" TopLine="909"/>
       </Position6>
       <Position7>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="597" Column="33" TopLine="589"/>
-      </Position7>
-      <Position8>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="866" Column="57" TopLine="862"/>
-      </Position8>
-      <Position9>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="1051" Column="14" TopLine="1025"/>
-      </Position9>
-      <Position10>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="915" Column="13" TopLine="899"/>
-      </Position10>
-      <Position11>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="923" Column="38" TopLine="909"/>
-      </Position11>
-      <Position12>
         <Filename Value="..\..\sharedunits\utils\quicksort.pas"/>
         <Caret Line="70" Column="20" TopLine="60"/>
-      </Position12>
-      <Position13>
+      </Position7>
+      <Position8>
         <Filename Value="..\..\sharedunits\utils\quicksort.pas"/>
         <Caret Line="100" Column="44" TopLine="89"/>
-      </Position13>
-      <Position14>
+      </Position8>
+      <Position9>
         <Filename Value="..\molecule\pdbmolecules.pas"/>
         <Caret Line="625" Column="21" TopLine="610"/>
-      </Position14>
-      <Position15>
+      </Position9>
+      <Position10>
         <Filename Value="..\docking\linegrids.pas"/>
         <Caret Line="33" Column="3" TopLine="17"/>
-      </Position15>
-      <Position16>
+      </Position10>
+      <Position11>
         <Filename Value="..\docking\linegrids.pas"/>
         <Caret Line="28" Column="32" TopLine="17"/>
-      </Position16>
-      <Position17>
+      </Position11>
+      <Position12>
         <Filename Value="..\..\sharedunits\utils\stringutils.pas"/>
         <Caret Line="98" Column="41" TopLine="91"/>
-      </Position17>
-      <Position18>
+      </Position12>
+      <Position13>
         <Filename Value="..\..\sharedunits\utils\stringutils.pas"/>
         <Caret Line="99" Column="70" TopLine="91"/>
-      </Position18>
-      <Position19>
+      </Position13>
+      <Position14>
         <Filename Value="..\..\sharedunits\utils\stringutils.pas"/>
         <Caret Line="987" Column="21" TopLine="976"/>
+      </Position14>
+      <Position15>
+        <Filename Value="..\base\oclconfiguration.pas"/>
+        <Caret Line="105" Column="24" TopLine="91"/>
+      </Position15>
+      <Position16>
+        <Filename Value="..\base\oclconfiguration.pas"/>
+        <Caret Line="111" Column="40" TopLine="91"/>
+      </Position16>
+      <Position17>
+        <Filename Value="..\base\oclconfiguration.pas"/>
+        <Caret Line="113" Column="45" TopLine="91"/>
+      </Position17>
+      <Position18>
+        <Filename Value="..\base\oclconfiguration.pas"/>
+        <Caret Line="95" Column="5" TopLine="90"/>
+      </Position18>
+      <Position19>
+        <Filename Value="..\base\oclconfiguration.pas"/>
+        <Caret Line="101" Column="3" TopLine="90"/>
       </Position19>
       <Position20>
         <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="105" Column="24" TopLine="91"/>
+        <Caret Line="105" Column="12" TopLine="90"/>
       </Position20>
       <Position21>
         <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="111" Column="40" TopLine="91"/>
+        <Caret Line="106" Column="45" TopLine="90"/>
       </Position21>
       <Position22>
         <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="113" Column="45" TopLine="91"/>
+        <Caret Line="113" Column="38" TopLine="90"/>
       </Position22>
       <Position23>
         <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="95" Column="5" TopLine="90"/>
+        <Caret Line="148" Column="21" TopLine="135"/>
       </Position23>
       <Position24>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="101" Column="3" TopLine="90"/>
-      </Position24>
-      <Position25>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="105" Column="12" TopLine="90"/>
-      </Position25>
-      <Position26>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="106" Column="45" TopLine="90"/>
-      </Position26>
-      <Position27>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="113" Column="38" TopLine="90"/>
-      </Position27>
-      <Position28>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="148" Column="21" TopLine="135"/>
-      </Position28>
-      <Position29>
         <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
         <Caret Line="139" Column="12" TopLine="128"/>
+      </Position24>
+      <Position25>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="84" Column="20" TopLine="71"/>
+      </Position25>
+      <Position26>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="278" Column="33" TopLine="264"/>
+      </Position26>
+      <Position27>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="276" TopLine="264"/>
+      </Position27>
+      <Position28>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="277" TopLine="264"/>
+      </Position28>
+      <Position29>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="276" TopLine="255"/>
       </Position29>
       <Position30>
         <Filename Value="chemeramain.pas"/>
-        <Caret Line="84" Column="20" TopLine="71"/>
+        <Caret Line="899" Column="25" TopLine="884"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -452,15 +452,6 @@
     </Other>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="1">
-      <Item1>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
-        <Source Value="chemeramain.pas"/>
-        <Line Value="147"/>
-      </Item1>
-    </BreakPoints>
     <Exceptions Count="4">
       <Item1>
         <Name Value="EAbort"/>
