Finito pdbparser, aggiunto TestPdbparser

--- a/TestChemera/TestChemera.lpi
+++ b/TestChemera/TestChemera.lpi
@@ -32,7 +32,7 @@
         <PackageName Value="LazUtils"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="4">
+    <Units Count="5">
       <Unit0>
         <Filename Value="TestChemera.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -49,6 +49,10 @@
         <Filename Value="stringutilstests.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit3>
+      <Unit4>
+        <Filename Value="pdbparsertests.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit4>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -59,12 +63,12 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\Open-Chemera-master\sharedunits\general;..\Open-Chemera-master\sharedunits\utils"/>
+      <OtherUnitFiles Value="..\Open-Chemera-master\sharedunits\general;..\Open-Chemera-master\sharedunits\utils;..\Open-Chemera-master\oclibrary\molecule"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
   </CompilerOptions>
   <Debugging>
-    <Exceptions Count="3">
+    <Exceptions Count="4">
       <Item1>
         <Name Value="EAbort"/>
       </Item1>
@@ -74,6 +78,9 @@
       <Item3>
         <Name Value="EFOpenError"/>
       </Item3>
+      <Item4>
+        <Name Value="EConvertError"/>
+      </Item4>
     </Exceptions>
   </Debugging>
 </CONFIG>
