--- a/TestChemera/TestChemera.lpi
+++ b/TestChemera/TestChemera.lpi
@@ -32,7 +32,7 @@
         <PackageName Value="LazUtils"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="5">
+    <Units Count="6">
       <Unit0>
         <Filename Value="TestChemera.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -53,6 +53,10 @@
         <Filename Value="pdbparsertests.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit4>
+      <Unit5>
+        <Filename Value="geomutiltests.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit5>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
